hard-gists/1788517/run.log
=== Docker Run Log for 1788517 ===
Started at: Mi 29. Okt 12:29:02 CET 2025

[2025-10-29 12:29:02] START: Running container for 1788517
[2025-10-29 12:29:03] SUCCESS: Container 3ef92a8fc3f611dc1623afdedae7d042cae1aa71c271185204f00ca9a2272f59 started for 1788517
=== Container logs for 1788517 ===
  File "/snippet.py", line 155
    print "Autodetection failed, try -w flag"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1788517 ===
[2025-10-29 12:29:05] INFO: Container 3ef92a8fc3f611dc1623afdedae7d042cae1aa71c271185204f00ca9a2272f59 has stopped
